<resources>
    <string name="app_name">NMA Sesija</string>
    <string name="name_hint">Vardas Pavardė</string>
    <string name="email_hint">El. paštas</string>
    <string name="phone_hint">Telefono numeris</string>
    <string name="bio_hint">Apie mane</string>
    <string name="after_days">Už %1$dd %2$dh: %3$s</string>
    <string name="after_hours">Už %1$dh %2$dmin: %3$s</string>
    <string name="now_happens">Dabar: %1$s</string>
    <string name="get_request_failed">Nepavyko gauti duomenų</string>
    <string name="save_request_failed">Nepavyko išsaugoti duomenų</string>
    <string name="news">Naujienos</string>
    <string name="academics">Dalyviai</string>
    <string name="schedule">Programa</string>
    <string name="before_supervisor_name">"Vadoviukas: %1$s"</string>
    <string name="all_academics">Visi akademikai</string>
    <string name="article_foto">Straipsnio nuotrauka</string>
    <string name="profile_picture">Profilio nuotrauka</string>
    <string name="settings">Nustatymai</string>
    <string name="get_notifications">Gauti transliacijas</string>
    <string name="get_notifications_summary">Gauti visiems transliuojamus pranešimus</string>
    <string name="notifications">Pranešimai</string>
    <string name="section">Sekcija</string>
    <string name="choose_section">Pasirinkite savo sekciją</string>
    <string name="section_key">choose_section</string>
    <string name="get_notifications_key">get_notifications</string>
    <string name="retry">Dar kart</string>
    <string name="facebook_app_id">1814977905435170</string>
    <string name="login_message">Prisijunkite naudodami tą elektroninį paštą, kurį nurodėte registruodamiesi:</string>
    <string name="logout">Atsijungti</string>
    <string name="error_user_collision">Šis elektroninis paštas susietas su kita paskyra.</string>
    <string name="continue_anonymously">Tęsti neprisijungus</string>
    <string name="academics_need_login">Kad peržiūrėtumėte akademikus, turite prisijungti.</string>
    <string name="login">Prisijungti</string>
    <string name="fb_login_protocol_scheme">fb1814977905435170</string>
    <string name="room">Kambarys</string>
    <string name="account">Profilis</string>
    <string name="save">Išsaugoti</string>
    <string name="profile_request_failed">Jūs nesate akademikas!</string>
    <string name="saved">Išsaugota</string>
    <string name="is_academic_key">is_academic</string>
    <string name="article_title">Įrašo pavadinimas</string>
    <string name="acticle_content">Įrašo turinys</string>
    <string name="publish_button_text">Paskelbti</string>
    <string name="unable_to_post_article">Nepavyko paskelbti įrašo</string>
    <string name="article_create_rules">Jūsų įrašą pamatys visi vos tik prisijungsite prie interneto.\nNerašykite žodžių didžiosiomis raidėmis :)\nPavadinimas turi būti trumpas ir aiškus.</string>
    <string name="article_create_empty_field">Įrašo pavadinimas ir/arba turinys negali būti tušti.</string>
</resources>
