<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/unit4">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blackText"
        android:textSize="@dimen/text16"
        android:text="@string/article_create_rules"
        android:layout_marginBottom="@dimen/unit1" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/article_name_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/article_title"
            android:inputType="text"
            android:lines="1"
            android:textSize="@dimen/text18" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/article_content_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/acticle_content"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:textSize="@dimen/text18" />
    </android.support.design.widget.TextInputLayout>


</LinearLayout>